<resources>
    <string name="app_name">Todo</string>
    <string name="todo_list">Todo List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_task">Add New Task</string>
    <string name="title">Title</string>
    <string name="selected_date">Selected date</string>
    <string name="description">description</string>
    <string name="delete">Delete</string>
    <string name="edit_task">Edit Task</string>
    <string name="save">Save</string>
</resources>